INSTALL(
    FILES 
        FindCOIN.cmake
        FindCyclus.cmake
        FindGlib.cmake
        FindGlibmm.cmake
        FindHDF5.cmake
        FindLibXML++.cmake
        FindSigC++.cmake
        FindSqlite3.cmake
        FindTcmalloc.cmake
        LibFindMacros.cmake
        UseCyclus.cmake
    DESTINATION share/cyclus/cmake
    COMPONENT core
    )

